@@ -1,6 +1,8 @@
 debhelper (7.4.12) UNRELEASED; urgency=low
 
   * dh_bugfiles: Doc typo. Closes: #563269
+  * makefile: Support the (asking for trouble) case of MAKE being set to
+    something with a space in it. Closes: #563557
 
  -- Joey Hess <joeyh@debian.org>  Fri, 01 Jan 2010 13:00:22 -0500
 
